--- a/src/popup.html
+++ b/src/popup.html
@@ -4,20 +4,28 @@
     <title>Faster</title>
   </head>
   <body>
-    <img src="assets/faster_logo.png" alt="logo" width="80px" />
-    <h1><i>Faster<i></h1>
-    <button
-      id="changeRate"
-      style="
-        color: #fff;
-        border-radius: 8px;
-        background-color: #45b3e6;
-        border-width: 0px;
-        padding: 4px;
-      "
-    >
-      Change playback rate
-    </button>
+    <div style="display: flex; align-items: center; flex-direction: column">
+      <img src="assets/faster_logo.png" alt="logo" width="80px" />
+      <h1><i>Faster</i></h1>
+    </div>
+    <div>
+      <h3 id="playbackRateOutput" align="center">1.0x</h3>
+      <input
+        type="range"
+        id="playbackRateSlider"
+        name="playbackRateSlider"
+        min="0"
+        max="4"
+        value="1"
+        step="0.1"
+      />
+      <label for="playbackRateSlider" style="font-weight: bold;">Playback rate speed</h4>
+    </div>
+    <p align="center">
+      <a href="https://github.com/Lucas-Fonte/faster" target="_blank">
+        <img src="assets/github_logo.svg" alt="github-logo" width="16px" />
+      </a>
+    </p>
   </body>
   <script src="popup.js"></script>
 </html>
